# pretty-midi-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  generate_test_data.py  pyproject.toml  requirements.txt  test.py
src/: err.rs  lib.rs  midi.rs
src/midi/: test.rs
test_data/: notes.json  scales.json
