[package]
name = "pretty_midi"
version = "0.1.0"
edition = "2021"

[lib]
name = "pretty_midi"
crate-type = ["cdylib"]

[dependencies]
midly = "0.5"
arrayvec = "0.7"

[dependencies.pyo3]
version = "0.17"
features = ["extension-module"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"